<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <!-- Quantity field -->
            <ImageButton
                android:id="@+id/decrement_quantity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="6"
                android:scaleType="fitXY"
                android:src="@drawable/pacman"
                />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                android:layout_weight="3"/>

            <ImageButton
                android:id="@+id/increment_quantity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="6"
                android:scaleType="fitXY"
                android:src="@drawable/plus" />

            </LinearLayout>


            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier"
                android:inputType="textCapWords" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_product_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="phone" />

            <ImageButton
                android:id="@+id/call_supplier"
                android:src="@drawable/phone_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="6"
                android:scaleType="fitXY"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

